--- a/FE/wedding101/public/index.html
+++ b/FE/wedding101/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c34ceff3fd4126f5762f28ba94df0cd7"></script>
     <title>React App</title>
   </head>
   <body>
