--- a/FE/wedding101/public/index.html
+++ b/FE/wedding101/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon/wedding3-96.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -25,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c34ceff3fd4126f5762f28ba94df0cd7"></script>
-    <title>React App</title>
+    <title>Wedding101</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
