--- a/FE/wedding101/public/index.html
+++ b/FE/wedding101/public/index.html
@@ -8,8 +8,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="일생의 추억을 일상에 남길 수 있도록" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo180.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
